Fix UI layout issue and add new test element in AmplitudePlayer.js.

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,13 @@ div#amplitude-left div#player-left-bottom {
   display: flex;
   background-color: #000;
   padding: 20px 10px;
+ 
+}
+#player-left-bottom{
+  width: 100%;
+}
+.testplayer{
+  display: flex;
 }
 
 div#amplitude-left div#player-left-bottom div#volume-container:after {
